--- a/roles/blackbox-exporter/templates/blackbox-exporter.service.j2
+++ b/roles/blackbox-exporter/templates/blackbox-exporter.service.j2
@@ -6,7 +6,7 @@ After=network.target
 User={{ blackbox_user }}
 Group={{ blackbox_group }}
 Type=simple
-ExecStart={{ blackbox_bin }} --config.file="{{blackbox_config}}"
+ExecStart={{ blackbox_bin }} --config.file="{{blackbox_config_path}}config.yml"
 Restart=on-failure
 
 [Install]
